--- a/style.css
+++ b/style.css
@@ -1,1 +1,57 @@
+body{
+    font:16/1.6, sans-serrif;
+    margin: 0;
+    padding: 0;
+}
+nav{
+    width: 100%;
+    background-color: blueviolet;
+}
+nav ul{
+    width: 80%;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
 
+}
+nav ul li{
+    display: inline-block;
+    padding: 20px;
+}
+nav ul li:hover{
+    background-color: cadetblue;
+}
+nav a{
+    color: #fff;
+    text-decoration: none;
+}
+.toggle{
+    width: 100%;
+    height: 50px;;
+    text-align: right;
+    font-size: 20px;
+    background-color: rgb(102, 12, 187);
+    display: none;
+}
+.toggle i{
+    padding-top: 10px;
+    padding-right: 10px;
+}
+
+/*For responsive design*/
+@media (max-width:768px){
+    .toggle{
+        display: block;
+    }
+    nav ul{
+        width: 100%;
+        text-align: center;
+        display: none;
+    }
+    nav ul li{
+        display: block;
+    }
+    .active{
+        display: block;
+    }
+}
